--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,17 +61,17 @@ jobs:
 #          ./commit.sh
           
            
-      - name: Send mail
-        if: always()
-        uses: dawidd6/action-send-mail@v2
-        with:
-          server_address: smtp.gmail.com
-          server_port: 465
-          username: ${{secrets.EMAIL_USERNAME}}
-          password: ${{secrets.EMAIL_PASSWORD}}
-          subject: Github Actions job result ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-          body: Build job of ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
-          to: shaposhnikoff@gmail.com
-          from: Maksym Shaposhnikov 
-          content_type: text/html
-          convert_markdown: true
+#      - name: Send mail
+#        if: always()
+#        uses: dawidd6/action-send-mail@v2
+#        with:
+#          server_address: smtp.gmail.com
+#          server_port: 465
+#          username: ${{secrets.EMAIL_USERNAME}}
+#          password: ${{secrets.EMAIL_PASSWORD}}
+#          subject: Github Actions job result ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+#          body: Build job of ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+#          to: shaposhnikoff@gmail.com
+#          from: Maksym Shaposhnikov 
+#          content_type: text/html
+#          convert_markdown: true
